Fixed z-index on leaflet buttons

--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,7 @@ a.article:hover {
     position: absolute;
     top: 0;
     right: 0;
+    z-index: -10;
 }
 
 /* ---------------------------------------------------
